Changelog update for 1.10
Signed-off-by: Stuart Halloway <stu@cognitect.com>